--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 Hello there, awesome person!
 <html>
-   <body>
+   <head>   
      <title>My awasome web page</title>
-  </body>
+  </head>
 </html>
