--- a/index.html
+++ b/index.html
@@ -3,4 +3,7 @@ Hello there, awesome person!
    <head>   
      <title>My awasome web page</title>
   </head>
+   <body>
+      <h1>I've done it</h1>
+   </body>
 </html>
